# EasyInjectBundled

./: .gitignore  LICENSE  README.md  branding.properties  build-toolscreen.bat  build.bat  pom.xml
exe/: CMakeLists.txt  embedded_dll_index.txt  embedded_resources.rc
exe/src/: embedded_resources.rc.in  main.cpp
src/main/java/com/easyinject/: AtLauncherSupport.java  DllInjector.java  FabricModError.java  Main.java  OsCheck.java  ProcessUtils.java  ToolscreenInstallerMain.java  Updater.java  WindowsNative.java
src/main/java/net/fabricmc/api/: ModInitializer.java
src/main/resources/: fabric.mod.json
toolscreen-installer-exe/: CMakeLists.txt
toolscreen-installer-exe/src/: main.cpp
